--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -46,6 +46,8 @@
 		<link href="{{ url_for('static', filename='css/start-template.css') }}" rel="stylesheet" type="text/css" />
 		<script type="text/javascript" src="{{ url_for('static', filename='js/jquery/jquery-1.11.1.min.js') }}"></script>
 		<script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap/bootstrap.min.js') }}"></script>
+		<script type="text/javascript" src="{{ url_for('static', filename='js/react/react.js') }}"></script>
+		<script type="text/javascript" src="{{ url_for('static', filename='js/react/react-dom.js') }}"></script>
 		<script type="text/javascript" src="https://code.highcharts.com/highcharts.js"></script>
 		<script type="text/javascript" src="{{ url_for('static', filename='js/app.js') }}"></script>
     </body>
