--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Plante</title>
+        <title>Ueki</title>
     </head>
     <body>
 		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -15,7 +15,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a href="/" class="navbar-brand">Plante</a>
+					<a href="/" class="navbar-brand">Ueki</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
@@ -38,6 +38,7 @@
 		<div class="container">
 			<div class="starter-template">
 				<div id="container">
+					<canvas id="myChart" height="100"></canvas>
 				</div>
 			</div>
 		</div>
@@ -46,7 +47,7 @@
 		<link href="{{ url_for('static', filename='css/start-template.css') }}" rel="stylesheet" type="text/css" />
 		<script type="text/javascript" src="{{ url_for('static', filename='js/jquery/jquery-1.11.1.min.js') }}"></script>
 		<script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap/bootstrap.min.js') }}"></script>
-		<script type="text/javascript" src="https://code.highcharts.com/highcharts.js"></script>
+		<script type="text/javascript" src="{{ url_for('static', filename='js/chartjs/Chart.min.js') }}"></script>
 		<script type="text/javascript" src="{{ url_for('static', filename='js/app.js') }}"></script>
     </body>
 </html>
