- Use react with chartjs - package js and css with webpack - manage js dependencies with npm
-> display list of sensors
-> display graph of selected sensor

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -42,13 +42,7 @@
 			</div>
 		</div>
 		<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet" type="text/css" />
-		<link href="{{ url_for('static', filename='css/font-awesome.css') }}" rel="stylesheet" type="text/css" />
-		<link href="{{ url_for('static', filename='css/start-template.css') }}" rel="stylesheet" type="text/css" />
-		<script type="text/javascript" src="{{ url_for('static', filename='js/jquery/jquery-1.11.1.min.js') }}"></script>
-		<script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap/bootstrap.min.js') }}"></script>
-		<script type="text/javascript" src="{{ url_for('static', filename='js/react/react.js') }}"></script>
-		<script type="text/javascript" src="{{ url_for('static', filename='js/react/react-dom.js') }}"></script>
-		<script type="text/javascript" src="https://code.highcharts.com/highcharts.js"></script>
-		<script type="text/javascript" src="{{ url_for('static', filename='js/app.js') }}"></script>
+		<link href="{{ url_for('static', filename='app.css') }}" rel="stylesheet" type="text/css" />
+		<script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
     </body>
 </html>
