update css and display tiles instead of list

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -38,7 +38,7 @@
 		<div class="container">
 			<div class="starter-template">
 				<div id="container">
-					<canvas id="myChart" height="100"></canvas>
+					<canvas id="myChart"></canvas>
 				</div>
 			</div>
 		</div>
