--- a/css/app.css
+++ b/css/app.css
@@ -2,32 +2,17 @@ body {
 	padding-top: 50px;
 }
 
-.starter-template {
-	padding: 40px 15px;
-	text-align: center;
-}
-
 .navbar {
 	border-bottom: 2px solid #08C;
 	box-shadow: 0px 2px 4px #aaa;
 }
 
-.left {
-	text-align: left;
+.starter-template {
+	padding: 40px 15px;
+	text-align: center;
 }
 
-#form_create_product {
-	padding: 5px 5px 5px 5px;
-}
-
-#button_add {
-	color: #FFF;
-	background-color: #08C;
-	border-color: #07B;
-}
-
-input[type=button] {
-	margin-top: 5px;
-	color: black;
+#list {
+	padding: 0px 10px 0px 10px;
 }
 
