possibility to add new sensor

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -22,14 +22,8 @@
 						<li>
 							<a href="/sensors">liste</a>
 						</li>
-						<li ng-show="!connected">
-							<a href="/">connexion</a>
-						</li>
-						<li ng-show="connected">
-							<a href="/">profil</a>
-						</li>
-						<li ng-show="connected">
-							<a href="/">deconnexion</a>
+						<li>
+							<a href="/#/add_sensor">Ajouter capteur</a>
 						</li>
 					</ul>
 				</div>
