--- a/ueki/templates/layout.html
+++ b/ueki/templates/layout.html
@@ -6,35 +6,7 @@
         <title>Ueki</title>
     </head>
     <body>
-		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-			<div class=container>
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a href="/" class="navbar-brand">Ueki</a>
-				</div>
-				<div id="navbar" class="navbar-collapse collapse">
-					<ul class="nav navbar-nav navbar-right">
-						<li>
-							<a href="/sensors">liste</a>
-						</li>
-						<li>
-							<a href="/#/add_sensor">Ajouter capteur</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-		<div class="container">
-			<div class="starter-template">
-				<div id="container">
-					<canvas id="myChart"></canvas>
-				</div>
-			</div>
+		<div id="body">
 		</div>
 		<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet" type="text/css" />
 		<link href="{{ url_for('static', filename='app.css') }}" rel="stylesheet" type="text/css" />
