--- a/ueki/templates/layout.html
+++ b/ueki/templates/layout.html
@@ -9,7 +9,7 @@
 		<div id="body">
 		</div>
 		<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet" type="text/css" />
-		<link href="{{ url_for('static', filename='app.css') }}" rel="stylesheet" type="text/css" />
+		<link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css" />
 		<script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
     </body>
 </html>
